--- a/deal/WebContent/WEB-INF/mybatis/jdbc.properties
+++ b/deal/WebContent/WEB-INF/mybatis/jdbc.properties
@@ -1,6 +1,4 @@
-##jdbc.driverClass=oracle.jdbc.driver.OracleDriver
-##jdbc.url=jdbc:oracle:thin:@127.0.0.1:1521:ORCL
-jdbc.driverClass=net.sf.log4jdbc.DriverSpy
-jdbc.url=jdbc:log4jdbc:oracle:thin:@127.0.0.1:1521:XE
-jdbc.username=sky
-jdbc.password=java$!
+jdbc.driverClass=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://chandb.cezajza6hc4f.ap-northeast-1.rds.amazonaws.com:3306/chanDB
+jdbc.username=kmc
+jdbc.password=123456789
